[tool.poetry]
name = "dbt-crud"
version = "0.0.0"
description = "Python api to manage dbt resources"
authors = ["Marc-Etienne Madore <17458989+memadore@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
tinydb = "^4.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
